--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios": "^0.21.1",
 		"config": "^3.3.3",
 		"express": "^4.17.1",
-		"jsonwebtoken": "^8.5.1"
+		"jsonwebtoken": "^8.5.1",
+		"node-cache": "^5.1.2"
 	}
 }
